--- a/projeto-1/index.html
+++ b/projeto-1/index.html
@@ -33,47 +33,46 @@
     <h2 class="subtitulo">Experiência</h2>
     <div>
       <p class="experiencia-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas, <strong>HTML</strong>, <strong>CSS</strong> e <strong>Javascript</strong>. Para aplicativos web cmo a rede social Dogs, trabalhei no UX e UI Design do projeto</p>
-    </div>
 
-    <div class="empresa">
-      <span class="empresa-ano">2045</span>
-      <h3 class="empresa-titulo">Bikcraft</h3>
-      <span class="empresa-titulo">Desenvolvedor Júnior</span>
-      <p class="empresa-texto">blaljvajoaoajogojob</p>
-      <ul class="empresa-habilidades">
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Javascript</li>
-        <li>UX Design</li>
-        <li>UI Design</li>
-      </ul>
-    </div>
-
-    <div class="empresa">
-      <span class="empresa-ano">2044-45</span>
-      <h3 class="empresa-titulo">Surfbot</h3>
-      <span class="empresa-titulo">Desenvolvedor Júnior</span>
-      <p class="empresa-texto">blaljvajoaoajogojob</p>
-      <ul class="empresa-habilidades">
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Javascript</li>
-      </ul>
-    </div>
-
-    <div class="empresa">
-      <span class="empresa-ano">2044</span>
-      <h3 class="empresa-titulo">
-        <h3>Brafé</h3>
+      <div class="empresa">
+        <span class="empresa-ano">2045</span>
+        <h3 class="empresa-titulo">Bikcraft</h3>
         <span class="empresa-titulo">Desenvolvedor Júnior</span>
-        <p class="empresa-texto">blaljvajoaoajogojob</p>
+        <p class="empresa-texto">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site.s</p>
         <ul class="empresa-habilidades">
-          <li>Email Marketing</li>
           <li>HTML</li>
+          <li>CSS</li>
+          <li>Javascript</li>
           <li>UX Design</li>
           <li>UI Design</li>
         </ul>
-    </div>
+      </div>
+
+      <div class="empresa">
+        <span class="empresa-ano">2044-45</span>
+        <h3 class="empresa-titulo">Surfbot</h3>
+        <span class="empresa-titulo">Desenvolvedor Júnior</span>
+        <p class="empresa-texto">blaljvajoaoajogojob</p>
+        <ul class="empresa-habilidades">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Javascript</li>
+        </ul>
+      </div>
+
+      <div class="empresa">
+        <span class="empresa-ano">2044</span>
+        <h3 class="empresa-titulo">
+          <h3>Brafé</h3>
+          <span class="empresa-titulo">Desenvolvedor Júnior</span>
+          <p class="empresa-texto">blaljvajoaoajogojob</p>
+          <ul class="empresa-habilidades">
+            <li>Email Marketing</li>
+            <li>HTML</li>
+            <li>UX Design</li>
+            <li>UI Design</li>
+          </ul>
+      </div>
 
   </section>
 
