--- a/projeto-1/index.html
+++ b/projeto-1/index.html
@@ -38,7 +38,7 @@
         <span class="empresa-ano">2045</span>
         <h3 class="empresa-titulo">Bikcraft</h3>
         <span class="empresa-titulo">Desenvolvedor Júnior</span>
-        <p class="empresa-texto">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site.s</p>
+        <p class="empresa-texto">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site.</p>
         <ul class="empresa-habilidades">
           <li>HTML</li>
           <li>CSS</li>
@@ -62,18 +62,63 @@
 
       <div class="empresa">
         <span class="empresa-ano">2044</span>
-        <h3 class="empresa-titulo">
-          <h3>Brafé</h3>
-          <span class="empresa-titulo">Desenvolvedor Júnior</span>
-          <p class="empresa-texto">blaljvajoaoajogojob</p>
-          <ul class="empresa-habilidades">
-            <li>Email Marketing</li>
-            <li>HTML</li>
-            <li>UX Design</li>
-            <li>UI Design</li>
-          </ul>
+        <h3 class="empresa-titulo">Brafé</h3>
+        <span class="empresa-titulo">Desenvolvedor Júnior</span>
+        <p class="empresa-texto">blaljvajoaoajogojob</p>
+        <ul class="empresa-habilidades">
+          <li>Email Marketing</li>
+          <li>HTML</li>
+          <li>UX Design</li>
+          <li>UI Design</li>
+        </ul>
       </div>
+  </section>
 
+  <section class="formacao" id="formacao" aria-label="Formação">
+    <div class="formacao-container">
+      <h2 class="subtitulo">Formação</h2>
+
+      <div>
+        <p class="formacao-texto">
+          Minha mais experiência acadêmica foi o <strong>mestrado</strong> (emoji) que fiz no exterior em <strong>UX Design</strong>. Além disso, me mantenho sempre atualizado com cursos intensivos online.
+        </p>
+
+        <ul class="faculdade-lista">
+          <li class="faculdade">
+            <span class="faculdade-tipo">Tecnólogo</span>
+            <h3 class="faculdade-curso">Ciência de Dados</h3>
+            <span class="faculdade-instituicao">FATEC Ourinhos</span>
+          </li>
+        </ul>
+
+        <ul class="faculdade-lista">
+          <li class="faculdade">
+            <span class="faculdade-tipo">Tecnólogo</span>
+            <h3 class="faculdade-curso">Design de Produto</h3>
+            <span class="faculdade-instituicao">Unicesumar</span>
+          </li>
+        </ul>
+
+        <div class="formacao-extra">
+          <div class="cursos">
+            <h3>Cursos Intensivos</h3>
+            <ul>
+              <li>Design Digital <span>72h</span></li>
+            </ul>
+          </div>
+
+          <div class="idiomas">
+            <h3>Idiomas</h3>
+            <ul>
+              <li>Inglês <span>/ Intermediário</span></li>
+              <li>Espanhol <span>/ Básico</span></li>
+            </ul>
+          </div>
+        </div>
+
+
+      </div>
+    </div>
   </section>
 
 </body>
